add first 2 flashcards

--- a/index.html
+++ b/index.html
@@ -10,34 +10,28 @@
   </head>
 
   <body>
-    <div class="container"
+    <h2>JS &amp; JQuery flash cards</h2>
+    <div class="container">
       <div class="container row">
-
-        <div row="col-md-2">
-          <div class="container term">
-            <p>
-              Java Script
-            </p>
+        <div row="col-sm-2">
+          <div class="term">
+            <p>Java Script</p>
           </div>
-          <div class="container definition">
-            <p>Is hard
-            </p>
+          <div class="definition">
+            <p>A high-level, dynamic, untyped, and interpreted programming language.</p>
           </div>
-      </div>
-
-
         </div>
-
-
-
-
-
-
+        <div row="col-sm-2">
+            <div class="term">
+              <p>Modulo</p>
+            </div>
+            <div class="definition">
+              <p>Finds the remainder after division of one number by another.</p>
+            </div>
+          </div
 
 
       </div>
     </div>
-    </div>
-
   </body>
 </html>
